--- a/ponder/team03.html
+++ b/ponder/team03.html
@@ -95,8 +95,8 @@
                 nothing you do has any effect!
               </p>
               <p>
-                Begin creating your ProductListing module by writing the code
-                for the constructor.
+                Begin creating your ProductList module by writing the code for
+                the constructor.
               </p>
               <p>
                 Eventually we will want to have more than one category of
@@ -117,7 +117,7 @@
               </p>
               <details>
                 <summary>
-                  Click for example code (<kbd>productListing.js</kbd>)
+                  Click for example code (<kbd>productList.js</kbd>)
                 </summary>
                 <pre><code class="lang-js">
 export default class ProductListing {
@@ -217,7 +217,7 @@ export default class ProductListing {
               </p>
               <details>
                 <summary>
-                  Click for example code (<kbd>productListing.js</kbd>)
+                  Click for example code (<kbd>productList.js</kbd>)
                 </summary>
                 <pre><code class="lang-js">
 export default class ProductListing {
@@ -274,7 +274,7 @@ export default class ProductListing {
               </p>
               <details>
                 <summary>
-                  Click for example code (<kbd>productListing.js</kbd>)
+                  Click for example code (<kbd>productList.js</kbd>)
                 </summary>
                 <pre><code class="lang-js">
 export default class ProductListing {
@@ -382,13 +382,13 @@ export default class ProductListing {
             </li>
             <li>
               <!-- BEGIN STEP -->
-              <!-- <h3>Remove extra products</h3>
+              <h3>Remove extra products</h3>
               <p>
                 <kbd>tents.json</kbd> has more tents than we currently need.
                 Write a method in <kbd>productList.js</kbd> that will filter our
                 list of products to just the 4 we need. Use that method to show
                 only those 4 tents.
-              </p> -->
+              </p>
 
               <!-- END STEP -->
             </li>
@@ -422,11 +422,11 @@ export default class ProductListing {
         </p>
         <h2>Make a pull request.</h2>
         <p>
-          After you have completed what you can, and reviewed the instructor's
-          solution, the driver should commit and push their changes, then submit
-          a pull request for this branch. Then review the pull request as a
-          team, close it, and merge the branch back into Main. Finally someone
-          should move the Trello card to "Done".
+          After you have completed what you can, reviewed the instructor's
+          solution, and gotten your code working the driver should commit and
+          push their changes then submit a pull request for this branch. Then
+          review the pull request as a team, close it, and merge the branch back
+          into Main. Finally someone should move the Trello card to "Done".
         </p>
         <h2>Submission</h2>
         <p>
