--- a/teacher/week02.html
+++ b/teacher/week02.html
@@ -47,6 +47,22 @@
           Encourage the students also to record their questions while reading
           and give them to you to be addressed.
         </p>
+        <p>
+          Students should start working on the Trello tasks this week as well.
+          They often start slowly. The goal should be for each team to complete
+          one card per team member per week (in addition to the team card). For
+          this week however you might suggest that they work as a team on the
+          "Add item to cart broken" task. They might only get that one card
+          done...and that is probably ok. It will get them into the code to
+          become familiar with it. It also acts as a bit of an icebreaker for
+          the team.
+        </p>
+        <p>
+          The rest of the cards are intended to be done as individuals...however
+          I have had groups ask if they can work on all of them together. I have
+          allowed that with the idea that they work towards developing the
+          confidence to complete cards on their own over the next few weeks.
+        </p>
         <h2>Meeting Time</h2>
         <p>
           I would spend some time talking about the NodeJs based development
