--- a/ponder/team07.html
+++ b/ponder/team07.html
@@ -315,6 +315,34 @@
                   />
                 </figure>
               </div>
+              <details>
+                <summary>Click for example</summary>
+                <pre><code class="lang-js">
+export function alertMessage(message, scroll = true) {
+  // create element to hold our alert
+  const alert = document.createElement('div');
+  // add a class to style the alert
+  alert.classList.add('alert');
+  // set the contents. You should have a message and an X or something the user can click on to remove
+
+  // add a listener to the alert to see if they clicked on the X
+  // if they did then remove the child
+  alert.addEventListener('click', function(e) {
+      if( ) { // how can we tell if they clicked on our X or on something else?  hint: check out e.target.tagName or e.target.innerText
+        main.removeChild(this);
+      }
+  })
+  // add the alert to the top of main
+  const main = document.querySelector('main');
+  main.prepend(alert);
+  // make sure they see the alert by scrolling to the top of the window
+  //we may not always want to do this...so default to scroll=true, but allow it to be passed in and overridden.
+  if(scroll)
+    window.scrollTo(0,0);
+
+}
+                </code></pre>
+              </details>
               <!-- END STEP -->
             </li>
             <li>
