add poke animation example

--- a/ponder/week02-trello.html
+++ b/ponder/week02-trello.html
@@ -52,10 +52,10 @@
           <li>
             <!-- BEGIN STEP -->
             <p>
-              One person should visit the team's copy of the Trello board for
-              the project. Add each of the attending team members to the "Add
-              item to cart broken" task...then move it to 'Doing'. Read the
-              details of the card.
+              Visit the team's copy of the Trello board for the project. Add
+              yourself to the "Add item to cart broken" task...then move it to
+              'Doing' (if the card is already in 'Doing' then just add
+              yourself). Read the details of the card.
             </p>
             <p>
               Make sure to <kbd>pull</kbd> any changes from Github before
